# Advent2024

./: Advent2024.cabal  CHANGELOG.md  LICENSE
solutions/: day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  general.hs
tests/: day1test.hs
