cabal-version:      3.0
name:               Advent2024
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             Wollam
maintainer:         wallamltt@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Advent2024
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

library
  hs-source-dirs:      solutions
  exposed-modules:
      Day1, General           
  build-depends:
      base ^>=4.17.2.1,
      containers
  default-language:    Haskell2010

test-suite advent2024-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             day1test.hs
  build-depends:
      base ^>=4.17.2.1,
      advent2024,      
      hspec
  default-language:    Haskell2010