cabal-version:      3.0
name:               Advent2024
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             Wollam
maintainer:         wallamltt@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Advent2024
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1,
        regex-base,
        regex-posix

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

library
  hs-source-dirs:      solutions
  exposed-modules:
      General, Day1, Day2, Day3, Day4, Day5       
  build-depends:
      base ^>=4.17.2.1,
      containers,
      regex-base,
      regex-posix
  default-language:    Haskell2010

